--- a/index.html
+++ b/index.html
@@ -10,24 +10,24 @@
 	<div class="card">
 		<div class="card__inner">
 			<div class="card__face card__face--front">
-				<h2>Happy Birthday, Chrys!!!</h2>
+				<h2>Happy Birthday, Delta!!!</h2>
 			</div>
 			<div class="card__face card__face--back">
 				<div class="card__content">
 					<div class="card__header">
 						<img src="pp.jpg" alt="" class="pp" />
-						<h2>Dear Mom, </h2>
+						<h2>Dear Laptop, </h2>
 					</div>
 					<div class="card__body">
-						<h3>Happy Birthday!!</h3>
-						<p> Wishing you dreams </p>
-						<p> To guide your path,  </p>
-						<p> Wishing you health </p>
-						<p> To keep your soul happy, </p>
-						<p> Wishing you pleasure, </p>
-						<p> To want nothing and have it, </p>
-						<p> Wishing you the happiest birthday in the world </p>
-						<p> You deserve it all! </p>
+						<h3> HAPPY BIRTHDAY, DELL LAPTOP </h3>
+						<p> Not exactly sorry for calling you laptop, </p>
+						<p> Considering, u r always del laptop to me </p>
+						<p> But, anyways, HAPPY BIRTHDAY 🎂 </p>
+						<p> I hope you've the best year ahead </p>
+						<p> With lots of love and happiness. </p>
+						<p> Another thing, I love you, dummy and nope </p>
+						<p> sadly, I don't hate you.  </p>
+						<p> Anyways, HAPPY BIRTHDAY, BESTIE!!! </p>
 
 					</div>
 				</div>
