--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 						<h2>Dear Laptop, </h2>
 					</div>
 					<div class="card__body">
-						<h3> HAPPY BIRTHDAY, DELL LAPTOP </h3>
+						<h3> HAPPY BIRTHDAY !!! </h3>
 						<p> Not exactly sorry for calling you laptop, </p>
 						<p> Considering, u r always del laptop to me </p>
 						<p> But, anyways, HAPPY BIRTHDAY 🎂 </p>
